Add better descriptions

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ url: "https://vantibyte.com"
 baseurl:
 google_analytics_key:
 
-description: Vantibyte Website
+description: Provider of modern broadcasting tools
 
 author:
   name: Vantibyte
