--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Vantibyte
 url: "https://vantibyte.com"
 baseurl:
-google_analytics_key:
+google_analytics_key: UA-176823557-1
 
 description: Provider of modern broadcasting tools
 
