Update discord links to use shortlink

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -23,6 +23,6 @@
       social_icon: Twitch
       new_window: true
     - name: Discord
-      link: https://discord.gg/BBRsR84
+      link: https://vntbyt.link/discord
       social_icon: Discord
       new_window: true
