--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: Provider of modern broadcasting tools
 author:
   name: Vantibyte
   email:
-  twitter: vantibyte
+  # twitter: vantibyte
 
 timezone: Etc/UTC
 
@@ -83,7 +83,8 @@ defaults:
       layout: "default"
 
 social_icons:
-  - Twitter
+  # - Twitter
+  - Reaired
   - Discord
   - Twitch
 
