Add blank GA Key/value

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Vantibyte
 url: "https://vantibyte.com"
 baseurl:
 # google_analytics_key: UA-176823557-1
+google_analytics_key: ""
 
 description: Provider of modern broadcasting tools
 
